# avance

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/avance/: Cargo.toml  README.md  build.rs
crates/avance/examples/: concurrent.rs  many-bars.rs  multi.rs  read-file.rs  read_file.rs  simultaneous.rs  single.rs  train.rs
crates/avance/src/: bar.rs  format.rs  iter.rs  lib.rs  style.rs  test.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/tqrs/: Cargo.toml
crates/tqrs/src/: lib.rs  test.rs
src/: main.rs
