[package]
name = "tqrs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

repository = "https://github.com/Aubrey-Liu/tqrs"
authors = ["Aubrey Liu <aubreyliu233@gmail.com>"]

description = "Command line tool tqdm in Rust"
readme = "README.md"
keywords = ["tqdm"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.3.8"
tqdm = "0.5.0"
