[package]
name = "avance"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Aubrey-Liu/avance"
description = "avance is a lightweight progress bar library."
readme = "README.md"
authors = ["Aubrey Liu <aubreyliu233@gmail.com>"]
keywords = ["progress", "progressbar"]
categories = ["command-line-utilities"]

[dependencies]
crossterm = "0.25"
once_cell = "1.18.0"
strum = { version = "0.25.0", features = ["derive"] }
