[package]
name = "avance"
version = "0.2.5"
rust-version = "1.70.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Aubrey-Liu/avance/tree/main/crates/avance"
homepage = "https://github.com/Aubrey-Liu/avance"
documentation = "https://docs.rs/avance"
description = "A lightweight, concurrent and easy-to-use progress bar"
readme = "README.md"
authors = ["Aubrey Liu <aubreyliu233@gmail.com>"]
keywords = ["progress", "progressbar"]
categories = ["command-line-utilities"]

[dependencies]
crossterm = "0.25"
strum = { version = "0.25.0", features = ["derive"] }
