[package]
name = "avance"
version = "0.3.1"
rust-version = "1.63.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Aubrey-Liu/avance/tree/main/crates/avance"
homepage = "https://github.com/Aubrey-Liu/avance"
documentation = "https://docs.rs/avance"
description = "A lightweight, concurrent and easy-to-use progress bar"
readme = "README.md"
authors = ["Aubrey Liu <aubreyliu233@gmail.com>"]
keywords = ["cli", "progress", "progressbar", "pb"]
categories = ["command-line-utilities"]

[build-dependencies]
version_check = "0.9.4"

[dependencies]
crossterm = "0.25"
once_cell = "1.18.0"
strum = { version = "0.25.0", features = ["derive"] }
