[package]
name = "tqrs-cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Aubrey-Liu/tqrs"
description = """
tqrs-cli offers easy-to-use progress bar in the command line, just like tqdm.
"""
readme = "../../README.md"
authors = ["Aubrey Liu <aubreyliu233@gmail.com>"]
keywords = ["tqdm", "progress", "progressbar"]
categories = ["command-line-utilities"]

[[bin]]
name = "tqrs"
path = "src/main.rs"

[dependencies]
clap = "4.3.8"
version = "3.0.0"
tqrs = { path = "../tqrs" }
