[package]
name = "avance-cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Aubrey-Liu/avance/tree/main/crates/cli"
homepage = "https://github.com/Aubrey-Liu/avance"
description = "avance-cli(avc) - out of box progress bar in the terminal"
readme = "README.md"
authors = ["Aubrey Liu <aubreyliu233@gmail.com>"]
keywords = ["progress", "progressbar"]
categories = ["command-line-utilities"]

[[bin]]
name = "avc"
path = "src/main.rs"

[dependencies]
clap = "4.3.8"
version = "3.0.0"
avance = { path = "../avance", version = ">=0.2.5" }
